f*ck you MemLeaks
+ Solved Memory Leaks problems that made the required memory to increase if  there was some font.
+ Added Icon and exe info :D

--- a/8ball-Pinball/SDL Game.vcxproj
+++ b/8ball-Pinball/SDL Game.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -116,6 +117,12 @@
     <ClCompile Include="ModuleSceneTitle.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="8-Ball Pinball.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
