--- a/8ball-Pinball/SDL Game.vcxproj.filters
+++ b/8ball-Pinball/SDL Game.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="ModuleSceneMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -118,5 +121,11 @@
     <ClCompile Include="ModuleSceneMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="8-Ball Pinball.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
   </ItemGroup>
 </Project>
